fix landing height jumping

--- a/pages/Landing/style.scss
+++ b/pages/Landing/style.scss
@@ -6,3 +6,7 @@
 .landing-buttons .el-button--large {
   font-size: 16px;
 }
+
+.landing-wrapper {
+  margin-top: 60px !important;
+}
